--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,11 @@ allure {
     report {
         version.set("2.35.1")
     }
-    adapter { // отвечает за появление папки build/allure-results
-        aspectjWeaver.set(true) //обработка аннотации @Step
+    adapter {
+        aspectjWeaver.set(true) 
         frameworks {
-            junit5 {  //название фреймворка
-                adapterVersion.set("2.29.1") //версия интеграции фреймворка и Allure
+            junit5 {  
+                adapterVersion.set("2.29.1") 
             }
         }
     }
@@ -26,7 +26,7 @@ dependencies {
             'io.qameta.allure:allure-selenide:2.29.1',
             "com.codeborne:selenide:7.9.4",
             "org.junit.jupiter:junit-jupiter:5.10.0",
-            'org.slf4j:slf4j-simple:2.0.7' //библиотека отвечающая за системное логирование
+            'org.slf4j:slf4j-simple:2.0.7' 
     )
 }
 
